sidebar: minor fix/Mac Scrollbar

--- a/app/styles/assets/annotation-sidebar.less
+++ b/app/styles/assets/annotation-sidebar.less
@@ -340,10 +340,13 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		width: 250px;
+		//width: 250px;
+		width: 245px;
 		display: inline-block;
 		}
 		
+	.pnd-item-title {
+		}
         
         // FOOTER
         
@@ -436,7 +439,8 @@
                 background-color: lighten(@subject-color, 5%);
                 line-height: 0px; 
                 height: 24px;
-                width: 24px;
+                //width: 24px;
+                width: 30px;
                 padding: 0 8px;
                 
 	               &:hover {
@@ -470,7 +474,8 @@
 	                background-color: transparent;
 	                line-height: 0px; 
 	                height: 24px;
-	                width: 24px;
+	                //width: 24px;
+	                width: 30px;
 	                padding: 0 8px;
 	                }
 	                
